[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy>1.19"]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Install something required for the build
# (you might want to use build-system.requires instead)
#before-build ='pip install --upgrade setuptools wheel numpy>1.19'
#before-build ='pip install --upgrade setuptools wheel numpy>1.19 f90wrap'
#repair-wheel-command = ""
#
skip = ["*-musllinux.*", "pp*-macosx-*"]
#
manylinux-x86_64-image = "manylinux_2_28"
#manylinux-aarch64-image = "manylinux_2_28"
#manylinux-ppc64le-image = "manylinux_2_28"
#manylinux-s390x-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
#test-requires = ["pip","setuptools", "wheel", "numpy", "f90wrap","build"]
before-all = "yum install -y openblas-static blas-devel lapack-static fftw-static || yum install -y  blas-devel lapack-static fftw-static openblas-static atlas-devel || yum install -y  blas-static lapack-static fftw-static atlas-static || apk add --upgrade py3-pip blas-dev lapack-dev fftw-dev openblas-static || apt-get install -y blas-static lapack-static fftw-static"