[project]
name = "uppasd"
version = "1.0.1"
description = "An UppASD Python wrapper"
readme = "README.md"
authors = [
    { name = "UppASD group", email = "uppasd@physics.uu.se" }
]
urls = { "Homepage" = "https://github.com/UppASD/UppASD" }
license = { text = "GPLv2" }
dependencies = [
    "python>=3.6",
    "numpy>1.19"
]


[project.scripts]
uppasd = "scripts.uppasd:main"
uppasd_interactive = "scripts.uppasd_interactive"

[tool.setuptools.packages.find]
where = ["uppasd"]
include = ["uppasd"]

#[tool.setuptools.cmdclass]
#build_ext = "setup_custom.cmake_build_ext"
#
#[project.ext_modules]
#_uppasd = { package = "setup_custom", path = "uppasd" }

[tool.cibuildwheel]
before-build = "python -m pip install --upgrade numpy>1.19 ninja"
skip = ["*-musllinux*", "pp*", "cp36-*", "cp37-*", "*-win32"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = "yum clean packages; yum install -y openblas-static blas-devel lapack-static fftw-static --nogpgcheck || yum install -y blas-devel lapack-devel blas-static lapack-static fftw-devel fftw-static atlas-devel atlas-static --nogpgcheck"

