[build-system]
requires = [
    "setuptools",
   "setuptools-git-versioning",
    "wheel",
    "numpy>1.19",
   "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "uppasd"
dynamic = ["version"]
description = "UppASD: Atomistic Spin Dynamics and Monte Carlo simulations"
readme = "README.md"
authors = [
    { name = "UppASD group", email = "uppasd@physics.uu.se" }
]
urls = { "Homepage" = "https://github.com/UppASD/UppASD" }
license = { text = "GPLv2" }
dependencies = [
    "numpy>1.19"
]

[project.scripts]
uppasd = "uppasd.pyasd:runuppasd"
uppasd_interactive = "uppasd.interactive:main"

[tool.setuptools.package-dir]
uppasd = "uppasd"

[tool.setuptools.packages.find]
where = ["."]
include = ["uppasd"]
#where = ["uppasd"]

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
# Proper naming would be as below
dirty_template = "{tag}.dev{ccount}"
dev_template = "{tag}.dev{ccount}"

[tool.cibuildwheel]
# Install something required for the build
# (you might want to use build-system.requires instead)
before-build ='python -m pip install --upgrade numpy>1.19 ninja'
#before-build ='pip install --upgrade setuptools wheel numpy>1.19 f90wrap'
#repair-wheel-command = ""
#
skip = ["*-musllinux*", "pp*","cp36-*", "cp37-*", "*-win32"]
#skip = ["*-musllinux*", "pp*","cp36-*", "cp37-*", "*-macosx_x86_64", "*-win32"]
#skip = ["*-musllinux.*", "pp*-macosx-*","cp36-*","pp37-*", "cp37-*", "*-macosx_x86_64", "*-win32"]]
#
manylinux-x86_64-image = "manylinux_2_28"
#manylinux-aarch64-image = "manylinux_2_28"
#manylinux-ppc64le-image = "manylinux_2_28"
#manylinux-s390x-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
#test-requires = ["pip","setuptools", "wheel", "numpy", "f90wrap","build"]
#before-all = "yum install -y openblas-static blas-devel lapack-static fftw-static  || yum install -y  blas-devel lapack-static fftw-static openblas-static atlas-devel  || yum install -y  openblas-static lapack-static fftw-static  || apk add --upgrade py3-pip blas-dev lapack-dev fftw-dev openblas-static  || apt-get install -y openblas-static lapack-static fftw-static "
before-all = "yum clean packages; yum install -y openblas-static blas-devel lapack-static fftw-static --nogpgcheck || yum install -y blas-devel lapack-devel blas-static lapack-static fftw-devel fftw-static atlas-devel atlas-static --nogpgcheck" 
